Default compile to uber-jar and convert to Flyway for DB migration/init
